--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <!-- Pilihan A: Tampilkan file .gif langsung (GIF biasanya sudah looping bila file dibuat loop) -->
       <!-- Ganti src dengan path/URL GIF milikmu -->
-         <video autoplay loop muted playsinline>
+         <video class="responsive-gif" autoplay loop muted playsinline>
           <source src="snaptik_7554982772947897608_v2.mp4" type="video/mp4">
           Browser kamu tidak mendukung video tag.
         </video>
@@ -80,3 +80,4 @@
   </div>
 </body>
 </html>
+
